syntax = "proto3";
package arpc;

service Client {
  rpc Login(LoginMsg) returns (LoginMsg) {}
  rpc Forward(stream ForwardMsg) returns (stream ForwardMsg) {}
}

service Server {
  rpc Forward (stream ForwardMsg) returns (stream BroadcastMsg) {}
}

message LoginMsg {
  string token = 1;
}

message RawMsg {
  int32 type =1;//消息ID，是raw消息的名字的hash值,采用hash算法是32-bit FNV-1a
  bytes raw = 2;//proto消息的marshal编码
}

//服务器广播消息，代理服务器会将此消息从新封装成Forward消息转给客户端
message BroadcastMsg {
  repeated int32 targets = 1;
  RawMsg msg = 2;
}

message ForwardMsg {
  int32 target = 1;
  RawMsg msg = 2;
}
